--- a/app/src/main/res/layout/video_layout.xml
+++ b/app/src/main/res/layout/video_layout.xml
@@ -1,58 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:paddingTop="8dp">
+    android:orientation="vertical" >
+
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/thumbnail_card_view"
-        android:layout_gravity="center"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp">
+        android:layout_margin="@dimen/recycle_item_margin"
+        card_view:cardCornerRadius="@dimen/cardview_default_radius"
+        card_view:cardElevation="@dimen/cardview_default_elevation"
+        android:background="@android:color/white">
 
         <ImageView
             android:id="@+id/video_thumbnail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"/>
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/info_card_view"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:background="@android:color/white"
-        card_view:cardCornerRadius="4dp">
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/card_height"
+            android:scaleType="centerCrop" />
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/name_holder"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/card_name_height"
+            android:layout_gravity="bottom"
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/video_title"
-                android:text="Title"
-                android:textColor="@android:color/darker_gray"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textStyle="bold"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="start"
+                android:paddingLeft="@dimen/recycle_item_margin"
+                android:paddingRight="@dimen/recycle_item_margin"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textAlignment="center"/>
 
             <TextView
                 android:id="@+id/video_description"
-                android:text="Description"
-                android:maxLines="3"
-                android:ellipsize="end"
-                android:textColor="@color/video_info_color"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="@dimen/recycle_item_margin"
+                android:paddingRight="@dimen/recycle_item_margin"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textSize="10sp"
+                android:textColor="@android:color/white" />
+
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
