--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="recycle_item_margin">8dp</dimen>
+    <dimen name="card_height">200dp</dimen>
+    <dimen name="card_name_height">70dp</dimen>
+    <dimen name="card_duration_margin">3dp</dimen>
+    <dimen name="card_author_bottom_margin">5dp</dimen>
 </resources>
