--- a/app/src/main/res/layout/layout_splash.xml
+++ b/app/src/main/res/layout/layout_splash.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:background="#075C3F">
 
     <ImageView
         android:id="@+id/imgLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@drawable/shortoftheweek_logo" />
+        android:src="@drawable/feature_banner" />
 
 </RelativeLayout>
