--- a/app/src/main/res/layout/video_layout.xml
+++ b/app/src/main/res/layout/video_layout.xml
@@ -1,65 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/recycle_item_margin"
+    card_view:cardCornerRadius="@dimen/cardview_default_radius"
+    card_view:cardElevation="@dimen/cardview_default_elevation">
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
+    <ImageView
+        android:id="@+id/video_thumbnail"
         android:layout_width="match_parent"
+        android:layout_height="@dimen/card_height"
+        android:scaleType="centerCrop" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/name_holder"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/card_name_height"
+        android:layout_gravity="bottom"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/video_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="start"
+            android:paddingLeft="@dimen/recycle_item_margin"
+            android:paddingRight="@dimen/recycle_item_margin"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textAlignment="center"/>
+
+        <TextView
+            android:id="@+id/video_author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/recycle_item_margin"
+            android:paddingRight="@dimen/recycle_item_margin"
+            android:layout_marginBottom="@dimen/card_author_bottom_margin"
+
+            android:textSize="10sp"
+            android:textColor="@android:color/darker_gray"
+            android:ellipsize="end"
+            android:maxLines="1"
+            />
+
+        <TextView
+            android:id="@+id/video_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="@dimen/recycle_item_margin"
+            android:paddingRight="@dimen/recycle_item_margin"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textSize="10sp"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/recycle_item_margin"
-        card_view:cardCornerRadius="@dimen/cardview_default_radius"
-        card_view:cardElevation="@dimen/cardview_default_elevation"
-        android:background="@android:color/white">
+        android:layout_gravity="top|end"
+        android:background="#99000000">
 
-        <ImageView
-            android:id="@+id/video_thumbnail"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/card_height"
-            android:scaleType="centerCrop" />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </LinearLayout>
+        <TextView
+            android:id="@+id/video_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:paddingLeft="@dimen/card_duration_margin"
+            android:paddingRight="@dimen/card_duration_margin"
+            android:textColor="@android:color/primary_text_dark"
+            android:textSize="12sp"/>
 
-        <LinearLayout
-            android:id="@+id/name_holder"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/card_name_height"
-            android:layout_gravity="bottom"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/video_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:gravity="start"
-                android:paddingLeft="@dimen/recycle_item_margin"
-                android:paddingRight="@dimen/recycle_item_margin"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:textAlignment="center"/>
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/video_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:paddingLeft="@dimen/recycle_item_margin"
-                android:paddingRight="@dimen/recycle_item_margin"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:textSize="10sp"
-                android:textColor="@android:color/white" />
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
