--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/video_list_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.app.vimeoshorts.classes.VideoRecyclerView
-            android:id="@+id/recycler_view"
-            android:scrollbars="vertical"
+
+        <FrameLayout
+            android:id="@+id/flContent"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/charcoal_background"/>
+            android:layout_height="match_parent">
+
+        </FrameLayout>
 
 </android.support.v4.widget.SwipeRefreshLayout>
